--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
     </header>
     <main>
         <!-- Client's says -->
-        <section class="max-w-screen-xl mx-auto my-10 py-5 px-8 md:px-16 lg:px-24">
+        <section class="max-w-screen-xl mx-auto  md:px-16 lg:px-24">
             <div class="text-center">
                 <h1 class="text-5xl">What Our Client Say</h1>
                 <p class="text-base mt-5">There are many variations of passages of Lorem Ipsum available, but the <br>majority have suffered alteration in some form, by injected humour.</p>
@@ -167,7 +167,9 @@
                         <a href="#slide4" class="btn btn-circle">❮</a> 
                         <a href="#slide2" class="btn btn-circle">❯</a>
                       </div>
-                      <div class="absolute left-8 text-white h-full flex items-center">
+                      <div>
+                      </div>
+                      <div class="absolute text-white h-full flex items-center">
                         <p class="text-sm text-center">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur.</p>
                       </div>
                     </div> 
@@ -188,6 +190,97 @@
                    
                   </div>
             </div>
+            <!-- FAQ -->
+            <section class="max-w-screen-l mx-auto  md:px-16 lg:px-24 mt-20">
+                <div class="text-center">
+                    <h1 class="text-5xl">Frequently Asked Any Questions</h1>
+                    <p class="text-base mt-5">There are many variations of passages of Lorem Ipsum available, but <br>the majority have suffered alteration in some form, by injected humour.</p>
+                </div>
+                <!-- accrodian section -->
+               <div class="flex justify-around gap:5 items-center mt-6">
+                <div class="flex-1">
+                    <div class="collapse collapse-plus bg-base-200">
+                        <input type="radio" name="my-accordion-3" checked="checked" /> 
+                        <div class="collapse-title text-xl font-medium">
+                          What services do you provide?
+                        </div>
+                        <div class="collapse-content"> 
+                          <p>Legal Services you can avial from us!</p>
+                        </div>
+                      </div>
+                      <div class="collapse collapse-plus bg-base-200">
+                        <input type="radio" name="my-accordion-3" /> 
+                        <div class="collapse-title text-xl font-medium">
+                          What is your location?
+                        </div>
+                        <div class="collapse-content"> 
+                          <p>Clipon House W12 8NZ</p>
+                        </div>
+                      </div>
+                      <div class="collapse collapse-plus bg-base-200">
+                        <input type="radio" name="my-accordion-3" /> 
+                        <div class="collapse-title text-xl font-medium">
+                          Your leagal advisor fees?
+                        </div>
+                        <div class="collapse-content"> 
+                          <p>Depands on your requirments</p>
+                        </div>
+                      </div>
+                </div>
+                <div class="flex-1">
+                    <img src="./images/faq.png" alt="">
+                </div>
+               </div>
+
+               <!-- Contact with Us!!! -->
+               <section class="max-w-screen-l mx-auto  md:px-16 lg:px-24 mt-20">
+                <div class="text-center">
+                    <h1 class="text-5xl">Contact With Us</h1>
+                    <p class="text-base mt-5">There are many variations of passages of Lorem Ipsum available, but <br>the majority have suffered alteration in some form, by injected humour.</p>
+                </div>
+                <div class="flex flex-cols-2">
+                     <!-- card section -->
+                <div class="flex-1">
+                    <!-- card-1 -->
+                     <div class=" mt-10 items-center card bg-base-100 shadow-xl">
+                         <figure><img src="./images/address.png" alt="Shoes" /></figure>
+                         <div class="text-center">
+                           <h2 class="text-center">Address</h2>
+                           <p class="text-center">A108 Adam Street,
+                             New York, NY 535022</p>
+                         </div>
+                       </div>
+                     <div class=" mt-10 items-center card bg-base-100 shadow-xl">
+                         <figure><img src="./images/address.png" alt="Shoes" /></figure>
+                         <div class="text-center">
+                           <h2 class="text-center">Address</h2>
+                           <p class="text-center">A108 Adam Street,
+                             New York, NY 535022</p>
+                         </div>
+                       </div>
+                     <div class=" mt-10 items-center card bg-base-100 shadow-xl">
+                         <figure><img src="./images/address.png" alt="Shoes" /></figure>
+                         <div class="text-center">
+                           <h2 class="text-center">Address</h2>
+                           <p class="text-center">A108 Adam Street,
+                             New York, NY 535022</p>
+                         </div>
+                       </div>
+                     <div class=" mt-10 items-center card bg-base-100 shadow-xl">
+                         <figure><img src="./images/address.png" alt="Shoes" /></figure>
+                         <div class="text-center">
+                           <h2 class="text-center">Address</h2>
+                           <p class="text-center">A108 Adam Street,
+                             New York, NY 535022</p>
+                         </div>
+                       </div>
+                 </div>
+                </div>
+                <div class="flex-1">
+                    
+                </div>
+                </section>
+
     </main>
     <footer></footer>
 </body>
