--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             </div>
             <div class="grid py-20 sm:grid-cols-2 md:grid-cols-3 lg:grid-6 mt-10 text-center  gap:20">
                 <!-- card -1 -->
-                <div class="card items-center">
+                <div class="card items-center border-r-2">
                     <figure><img src="./images/business.png" alt="Shoes" /></figure>
                     <div class="card-body">
                         <h2 class="text-center text-xl font-bold">Business Law</h2>
@@ -89,7 +89,7 @@
                     </div>
                 </div>
                 <!-- card -2 -->
-                <div class="card border-solid items-center">
+                <div class="card border-solid items-center border-b-4">
                     <figure><img src="./images/criminal.png" alt="Shoes" /></figure>
                     <div class="card-body">
                         <h2 class="text-center text-xl font-bold">Criminal Law</h2>
@@ -101,7 +101,7 @@
                     </div>
                 </div>
                 <!-- card -3 -->
-                <div class="card  items-center">
+                <div class="card  items-center border-r-2 ">
                     <figure><img src="./images/child.png" alt="Shoes" /></figure>
                     <div class="card-body">
                         <h2 class="text-center text-xl font-bold">Child Law</h2>
@@ -113,7 +113,7 @@
                     </div>
                 </div>
                 <!-- card -4 -->
-                <div class="card mt-10 items-center">
+                <div class="card mt-10 items-center border-r-4">
                     <figure><img src="./images/education.png" alt="Shoes" /></figure>
                     <div class="card-body">
                         <h2 class="text-center text-xl font-bold">Education Law</h2>
@@ -137,7 +137,7 @@
                     </div>
                 </div>
                 <!-- card -6 -->
-                <div class="card mt-10 items-center">
+                <div class="card mt-10 items-center border-l-2">
                     <figure><img src="./images/tax.png" alt="Shoes" /></figure>
                     <div class="card-body">
                         <h2 class="text-center text-xl font-bold">TaxLaw</h2>
@@ -203,7 +203,7 @@
                 </div>
                 <!-- accrodian section -->
                 <div class="flex justify-around gap:5 items-center mt-6">
-                    <div class="flex-1">
+                    <div class="flex-1 space-y-5">
                         <div class="collapse collapse-plus bg-base-200">
                             <input type="radio" name="my-accordion-3" checked="checked" />
                             <div class="collapse-title text-xl font-medium">
@@ -247,8 +247,8 @@
                         </div>
                         <div class="flex">
                             <!-- card section -->
-                            <div class="flex justify-between gap:20 mb-20">
-                                <div class="grid lg:grid-cols-2  flex-1 gap-5">
+                            <div class="flex justify-between gap:20 mb-20 items-center">
+                                <div class="grid lg:grid-cols-2 items-center flex-1 gap-5">
                                     <!-- card-1 -->
                                     <div class=" mt-10 card bg-base-100 shadow-xl">
                                         <figure><img src="./images/address.png" alt="Shoes" /></figure>
@@ -284,12 +284,12 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class=" flex-1 space-y-8 mx-20 mt-10 items-center ">
+                            <div class=" flex-1 mt-10 space-y-5 gap-5 mx-3 items-center ">
                                 <input type="text" placeholder="Your-Name" class="input input-bordered" /> <br>
                                 <input type="text" placeholder="E-mail Address" class="input input-bordered" /> <br>
                                 <input type="text" placeholder="Subject" class="input input-bordered" /> <br>
                                 <input type="text" placeholder="Your Message" class="input input-bordered" /> <br>
-                                <button class="btn btn-primary">Send Message</button>
+                                <button class="btn btn-primary mt-10">Send Message</button>
                             </div>
                         </div>
 
@@ -327,8 +327,8 @@
         </div>
        
     </footer>
-    <div class="container w-auto text-center">
-        <span class="text-center borer-8"> &copy; All Rights Reserved by Legal Service Bdh 2024</span>
+    <div class="container w-auto text-center text-sm">
+        <span class="text-center borer-8"> &copy;All Rights Reserved by Legal Service Bdh 2024</span>
     </div>
    
 
